@@ -104,6 +104,9 @@ static SEXP seq_colon(double n1, double n2, SEXP call)
     if (r >= R_XLEN_T_MAX)
         errorcall(call, _("result would be too long a vector"));
 
+    if (n1 == (R_xlen_t)n1 && n2 == (R_xlen_t)n2)
+        return R_compact_intrange(n1, n2);
+
     SEXP ans;
     R_xlen_t n = (R_xlen_t)(r + 1 + FLT_EPSILON);
 
@@ -123,20 +126,10 @@ static SEXP seq_colon(double n1, double n2, SEXP call)
     }
     if (useInt)
     {
-        int in1 = (int)(n1);
-        ans = allocVector(INTSXP, n);
         if (n1 <= n2)
-            for (int i = 0; i < n; i++)
-            {
-                //		if ((i+1) % NINTERRUPT == 0) R_CheckUserInterrupt();
-                INTEGER(ans)[i] = in1 + i;
-            }
+            ans = R_compact_intrange(n1, n1 + n - 1);
         else
-            for (int i = 0; i < n; i++)
-            {
-                //		if ((i+1) % NINTERRUPT == 0) R_CheckUserInterrupt();
-                INTEGER(ans)[i] = in1 - i;
-            }
+            ans = R_compact_intrange(n1, n1 - n + 1);
     }
     else
     {
@@ -1185,34 +1178,14 @@ SEXP attribute_hidden do_seq_along(SEXP call, SEXP op, SEXP args, SEXP rho)
     else
         len = xlength(CAR(args));
 
-#ifdef LONG_VECTOR_SUPPORT
-    if (len > INT_MAX)
-    {
-        ans = allocVector(REALSXP, len);
-        double *p = REAL(ans);
-        for (R_xlen_t i = 0; i < len; i++)
-        {
-            //	    if ((i+1) % NINTERRUPT == 0) R_CheckUserInterrupt();
-            p[i] = (double)(i + 1);
-        }
-    }
+    if (len == 0)
+        return allocVector(INTSXP, 0);
     else
-#endif
-    {
-        ans = allocVector(INTSXP, len);
-        int *p = INTEGER(ans);
-        for (int i = 0; i < len; i++)
-        {
-            //	    if ((i+1) % NINTERRUPT == 0) R_CheckUserInterrupt();
-            p[i] = i + 1;
-        }
-    }
-    return ans;
+        return R_compact_intrange(1, len);
 }
 
 SEXP attribute_hidden do_seq_len(SEXP call, SEXP op, SEXP args, SEXP rho)
 {
-    SEXP ans;
     R_xlen_t len;
 
     checkArity(op, args);
@@ -1231,27 +1204,8 @@ SEXP attribute_hidden do_seq_len(SEXP call, SEXP op, SEXP args, SEXP rho)
         errorcall(call, _("argument must be coercible to non-negative integer"));
 #endif
 
-#ifdef LONG_VECTOR_SUPPORT
-    if (len > INT_MAX)
-    {
-        ans = allocVector(REALSXP, len);
-        double *p = REAL(ans);
-        for (R_xlen_t i = 0; i < len; i++)
-        {
-            //	    if ((i+1) % NINTERRUPT == 0) R_CheckUserInterrupt();
-            p[i] = (double)(i + 1);
-        }
-    }
+    if (len == 0)
+        return allocVector(INTSXP, 0);
     else
-#endif
-    {
-        ans = allocVector(INTSXP, len);
-        int *p = INTEGER(ans);
-        for (int i = 0; i < len; i++)
-        {
-            //	    if ((i+1) % NINTERRUPT == 0) R_CheckUserInterrupt();
-            p[i] = i + 1;
-        }
-    }
-    return ans;
+        return R_compact_intrange(1, len);
 }
